@@ -31,6 +31,7 @@ import org.junit.Test;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeoutException;
 
 import org.apache.tinkerpop.gremlin.driver.ser.Serializers;
@@ -99,13 +100,7 @@ public class GremlinServerAuthIntegrateTest extends AbstractGremlinServerIntegra
         final Cluster cluster = TestClientFactory.build().credentials("stephen", "password").create();
         final Client client = cluster.connect();
 
-        try {
-            assertEquals(2, client.submit("1+1").all().get().get(0).getInt());
-            assertEquals(3, client.submit("1+2").all().get().get(0).getInt());
-            assertEquals(4, client.submit("1+3").all().get().get(0).getInt());
-        } finally {
-            cluster.close();
-        }
+        assertConnection(cluster, client);
     }
 
     @Test
@@ -115,13 +110,7 @@ public class GremlinServerAuthIntegrateTest extends AbstractGremlinServerIntegra
                 .credentials("stephen", "password").create();
         final Client client = cluster.connect();
 
-        try {
-            assertEquals(2, client.submit("1+1").all().get().get(0).getInt());
-            assertEquals(3, client.submit("1+2").all().get().get(0).getInt());
-            assertEquals(4, client.submit("1+3").all().get().get(0).getInt());
-        } finally {
-            cluster.close();
-        }
+        assertConnection(cluster, client);
     }
 
     @Test
@@ -181,13 +170,7 @@ public class GremlinServerAuthIntegrateTest extends AbstractGremlinServerIntegra
                 .credentials("stephen", "password").create();
         final Client client = cluster.connect();
 
-        try {
-            assertEquals(3, client.submit("1+2").all().get().get(0).getInt());
-            assertEquals(2, client.submit("1+1").all().get().get(0).getInt());
-            assertEquals(4, client.submit("1+3").all().get().get(0).getInt());
-        } finally {
-            cluster.close();
-        }
+        assertConnection(cluster, client);
     }
 
     @Test
@@ -196,13 +179,7 @@ public class GremlinServerAuthIntegrateTest extends AbstractGremlinServerIntegra
                 .credentials("stephen", "password").create();
         final Client client = cluster.connect();
 
-        try {
-            assertEquals(2, client.submit("1+1").all().get().get(0).getInt());
-            assertEquals(3, client.submit("1+2").all().get().get(0).getInt());
-            assertEquals(4, client.submit("1+3").all().get().get(0).getInt());
-        } finally {
-            cluster.close();
-        }
+        assertConnection(cluster, client);
     }
 
     @Test
@@ -235,6 +212,16 @@ public class GremlinServerAuthIntegrateTest extends AbstractGremlinServerIntegra
 
             final Map vpName = (Map)client.submit("v.property('name')").all().get().get(0).getObject();
             assertEquals("stephen", vpName.get("value"));
+        } finally {
+            cluster.close();
+        }
+    }
+
+    private static void assertConnection(final Cluster cluster, final Client client) throws InterruptedException, ExecutionException {
+        try {
+            assertEquals(2, client.submit("1+1").all().get().get(0).getInt());
+            assertEquals(3, client.submit("1+2").all().get().get(0).getInt());
+            assertEquals(4, client.submit("1+3").all().get().get(0).getInt());
         } finally {
             cluster.close();
         }
