@@ -24,10 +24,10 @@ import org.apache.tinkerpop.gremlin.driver.Client;
 import org.apache.tinkerpop.gremlin.driver.Cluster;
 import org.apache.tinkerpop.gremlin.driver.MessageSerializer;
 import org.apache.tinkerpop.gremlin.driver.exception.ResponseException;
+import org.apache.tinkerpop.gremlin.driver.message.ResponseStatusCode;
 import org.apache.tinkerpop.gremlin.driver.ser.GryoMessageSerializerV1d0;
 import org.apache.tinkerpop.gremlin.driver.ser.GryoMessageSerializerV3d0;
 import org.apache.tinkerpop.gremlin.server.auth.Krb5Authenticator;
-import org.apache.tinkerpop.gremlin.util.Log4jRecordingAppender;
 import org.ietf.jgss.GSSException;
 import org.junit.After;
 import org.junit.Before;
@@ -37,10 +37,9 @@ import org.slf4j.LoggerFactory;
 import java.io.File;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.concurrent.ExecutionException;
 import javax.security.auth.login.LoginException;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
@@ -50,7 +49,6 @@ import static org.junit.Assert.fail;
  */
 public class GremlinServerAuthKrb5IntegrateTest extends AbstractGremlinServerIntegrationTest {
     private static final org.slf4j.Logger logger = LoggerFactory.getLogger(GremlinServerAuthKrb5IntegrateTest.class);
-    private Log4jRecordingAppender recordingAppender = null;
 
     static final String TESTCONSOLE = "GremlinConsole";
     static final String TESTCONSOLE_NOT_LOGGED_IN = "UserNotLoggedIn";
@@ -60,7 +58,6 @@ public class GremlinServerAuthKrb5IntegrateTest extends AbstractGremlinServerInt
     @Before
     @Override
     public void setUp() throws Exception {
-        setupForEachTest();
         try {
             final String buildDir = System.getProperty("build.dir");
             kdcServer = new KdcFixture(buildDir +
@@ -70,19 +67,6 @@ public class GremlinServerAuthKrb5IntegrateTest extends AbstractGremlinServerInt
             logger.warn(e.getMessage());
         }
         super.setUp();
-    }
-
-    public void setupForEachTest() {
-        recordingAppender = new Log4jRecordingAppender();
-        final Logger rootLogger = Logger.getRootLogger();
-        rootLogger.addAppender(recordingAppender);
-    }
-
-    @After
-    public void teardownForEachTest() throws Exception {
-        final Logger rootLogger = Logger.getRootLogger();
-        rootLogger.removeAppender(recordingAppender);
-        kdcServer.close();
     }
 
     /**
@@ -139,13 +123,7 @@ public class GremlinServerAuthKrb5IntegrateTest extends AbstractGremlinServerInt
         final Cluster cluster = TestClientFactory.build().jaasEntry(TESTCONSOLE)
                 .protocol(kdcServer.serverPrincipalName).addContactPoint(kdcServer.hostname).create();
         final Client client = cluster.connect();
-        try {
-            assertEquals(2, client.submit("1+1").all().get().get(0).getInt());
-            assertEquals(3, client.submit("1+2").all().get().get(0).getInt());
-            assertEquals(4, client.submit("1+3").all().get().get(0).getInt());
-        } finally {
-            cluster.close();
-        }
+        assertConnection(cluster, client);
     }
 
     @Test
@@ -217,13 +195,7 @@ public class GremlinServerAuthKrb5IntegrateTest extends AbstractGremlinServerInt
         final Cluster cluster = TestClientFactory.build().jaasEntry(TESTCONSOLE).enableSsl(true).sslSkipCertValidation(true)
                 .protocol(kdcServer.serverPrincipalName).addContactPoint(kdcServer.hostname).create();
         final Client client = cluster.connect();
-        try {
-            assertEquals(2, client.submit("1+1").all().get().get(0).getInt());
-            assertEquals(3, client.submit("1+2").all().get().get(0).getInt());
-            assertEquals(4, client.submit("1+3").all().get().get(0).getInt());
-        } finally {
-            cluster.close();
-        }
+        assertConnection(cluster, client);
     }
 
     @Test
@@ -235,13 +207,7 @@ public class GremlinServerAuthKrb5IntegrateTest extends AbstractGremlinServerInt
         final Cluster cluster = TestClientFactory.build().jaasEntry(TESTCONSOLE)
                 .protocol(kdcServer.serverPrincipalName).addContactPoint(kdcServer.hostname).serializer(serializer).create();
         final Client client = cluster.connect();
-        try {
-            assertEquals(2, client.submit("1+1").all().get().get(0).getInt());
-            assertEquals(3, client.submit("1+2").all().get().get(0).getInt());
-            assertEquals(4, client.submit("1+3").all().get().get(0).getInt());
-        } finally {
-            cluster.close();
-        }
+        assertConnection(cluster, client);
     }
 
     @Test
@@ -253,6 +219,10 @@ public class GremlinServerAuthKrb5IntegrateTest extends AbstractGremlinServerInt
         final Cluster cluster = TestClientFactory.build().jaasEntry(TESTCONSOLE)
                 .protocol(kdcServer.serverPrincipalName).addContactPoint(kdcServer.hostname).serializer(serializer).create();
         final Client client = cluster.connect();
+        assertConnection(cluster, client);
+    }
+
+    private static void assertConnection(final Cluster cluster, final Client client) throws InterruptedException, ExecutionException {
         try {
             assertEquals(2, client.submit("1+1").all().get().get(0).getInt());
             assertEquals(3, client.submit("1+2").all().get().get(0).getInt());
@@ -266,14 +236,18 @@ public class GremlinServerAuthKrb5IntegrateTest extends AbstractGremlinServerInt
      * Tries to force the logger to flush fully or at least wait until it does.
      */
     private void assertFailedLogin() throws Exception {
-        stopServer();
-
-        boolean logMessageIdentified = false;
-        for (int ix = 0; ix < 10 && !logMessageIdentified; ix++) {
-            logMessageIdentified = recordingAppender.logContainsAny("WARN - Failed to login to kdc");
-            if (!logMessageIdentified) Thread.sleep(1000);
+        final Cluster cluster = TestClientFactory.build().jaasEntry(TESTCONSOLE)
+                .protocol(kdcServer.serverPrincipalName).addContactPoint(kdcServer.hostname).create();
+        final Client client = cluster.connect();
+        try {
+            client.submit("1+1").all().get();
+            fail("The kerberos config is a bust so this request should fail");
+        } catch (Exception ex) {
+            final ResponseException re = (ResponseException) ex.getCause();
+            assertEquals(ResponseStatusCode.SERVER_ERROR, re.getResponseStatusCode());
+            assertEquals("Authenticator is not ready to handle requests", re.getMessage());
+        } finally {
+            cluster.close();
         }
-
-        assertThat(logMessageIdentified, is(true));
     }
 }
